k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: edu-andrey-bychenkov
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31253
  selector:
    app: django
